Atcoder/ABC過去問/D/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/ABC161D.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/D/ABC161D.cpp:317:19: error: 'pahse' was not declared in this scope; did you mean 'phase'?
  317 |           else if(pahse==2){phase=0;if(f%10<9){deq.push_back(f*10+f%10+1);cnt++;}}
      |                   ^~~~~
      |                   phase
